c/experimental/stf/include/cccl/c/experimental/stf/stf.h

//! \defgroup AccessMode Data Access Modes
//! \brief Specifies how tasks access logical data
//! \{

//! \brief Data access mode for task dependencies
//!
//! Specifies how a task will access logical data, which determines
//! synchronization requirements and concurrency opportunities.
typedef enum stf_access_mode // NOLINT(cppcoreguidelines-use-enum-class): C API.
{
  STF_NONE  = 0, //!< No access (invalid)
  STF_READ  = 1 << 0, //!< Read-only access - allows concurrent readers
  STF_WRITE = 1 << 1, //!< Write-only access - requires exclusive access
  STF_RW    = STF_READ | STF_WRITE //!< Read-write access - requires exclusive access
} stf_access_mode;
//! \brief Forward declaration of \c stf_ctx_handle (full definition appears
//! below in the context section). Declared here so the
//! stf_ctx_get_place_resources() accessor can refer to it.
typedef struct stf_ctx_handle_t* stf_ctx_handle;
//! \}

//! \defgroup Handles Opaque Handles
//! \brief Opaque handle types for STF objects
//! \{

//!
//! \brief Opaque handle for STF context
//!
//! Context stores the state of the STF library and serves as entry point for all API calls.
//! Must be created with stf_ctx_create() or stf_ctx_create_graph() and destroyed with stf_ctx_finalize().
//! (Forward declared earlier in the place section.)

//!
//! \brief Opaque handle for logical data
//!
//! Represents abstract data that may exist in multiple memory locations.
//! Created with stf_logical_data() or stf_logical_data_empty() and destroyed with stf_logical_data_destroy().

typedef struct stf_logical_data_handle_t* stf_logical_data_handle;
//!
//! \brief Opaque handle for task
//!
//! Represents a computational task that operates on logical data.
//! Created with stf_task_create() and destroyed with stf_task_destroy().

typedef struct stf_task_handle_t* stf_task_handle;
//!
//! \brief Opaque handle for a host launch scope
//!
//! A host launch scope schedules a user-provided C callback on the host
//! as a proper task graph node, with full dependency tracking.
//! Created with stf_host_launch_create() and destroyed with stf_host_launch_destroy().

typedef struct stf_host_launch_handle_t* stf_host_launch_handle;
//! \}

//! \defgroup Context Context Management
//! \brief Create, configure, and finalize STF contexts
//! \{

//!
//! \brief Create STF context with stream backend
//!
//! Creates a new STF context using the default stream-based backend.
//! Tasks are executed eagerly using CUDA streams and events.
//!
//! \return Context handle, or NULL if allocation failed
//!
//! \post On success, caller must finalize with stf_ctx_finalize()
//!
//! \par Example:
//! \code
//! stf_ctx_handle ctx = stf_ctx_create();
//! // ... use context ...
//! stf_ctx_finalize(ctx);
//! \endcode
//!
//! \see stf_ctx_create_graph(), stf_ctx_finalize()

stf_ctx_handle stf_ctx_create(void);
//!
//! \brief Finalize STF context
//!
//! Performs write-back of modified data to host and releases all resources
//! associated with the context. Whether the call blocks until the underlying
//! CUDA work has actually completed depends on how the context was created:
//!
//!   - Contexts created with stf_ctx_create(), stf_ctx_create_graph(), or
//!     stf_ctx_create_ex() with `has_stream == 0` block until all pending
//!     operations have completed before returning.
//!   - Contexts created with stf_ctx_create_ex() and `has_stream != 0`
//!     enqueue the remaining work and the context's resource-release callback
//!     onto the caller-provided `opts.stream`, then return without
//!     synchronizing that stream. The context handle itself is invalid as
//!     soon as the call returns, but the queued CUDA work, and any
//!     resources kept alive by it (including a shared
//!     stf_async_resources_handle), only become idle once
//!     `opts.stream` reaches that completion point. Use
//!     cudaStreamSynchronize() (or an event/dependency on `opts.stream`)
//!     before observing results on the host or releasing the shared handle.
//!
//! \param ctx Context handle to finalize
//!
//! \pre ctx must be valid context handle
//! \post All pending operations are either completed (blocking case) or
//!       enqueued on the caller stream (non-blocking case); resources are
//!       released; ctx becomes invalid.
//!
//! \par Example (blocking, default-created context):
//! \code
//! stf_ctx_handle ctx = stf_ctx_create();
//! // ... submit tasks ...
//! stf_ctx_finalize(ctx);  // Blocks until completion
//! \endcode
//!
//! \par Example (non-blocking, caller-provided stream):
//! \code
//! stf_ctx_options opts = {0};
//! opts.has_stream = 1;
//! opts.stream     = user_stream;
//! stf_ctx_handle ctx = stf_ctx_create_ex(&opts);
//! // ... submit tasks ...
//! stf_ctx_finalize(ctx); // Returns before user_stream drains.
//! cudaStreamSynchronize(user_stream); // Required before observing results.
//! \endcode
//!
//! \see stf_ctx_create(), stf_ctx_create_graph(), stf_ctx_create_ex(),
//!      stf_fence()

void stf_ctx_finalize(stf_ctx_handle ctx);
//! \}

//! \defgroup LogicalData Logical Data Management
//! \brief Create and manage abstract data handles
//! \{

//!
//! \brief Create logical data from existing memory buffer
//!
//! Creates logical data handle from existing memory buffer, assuming host data place.
//! This is a convenience wrapper around stf_logical_data_with_place() with host placement.
//!
//! \param ctx Context handle
//! \param addr Pointer to existing data buffer (assumed to be host memory)
//! \param sz Size of data in bytes
//!
//! \pre ctx must be valid context handle
//! \pre addr must not be NULL and point to host-accessible memory
//! \pre sz must be greater than 0
//! \return Logical data handle, or NULL on allocation failure
//!
//! \note This function assumes host memory. For device/managed memory, use stf_logical_data_with_place()
//! \note Equivalent to host placement via stf_data_place_host() passed to stf_logical_data_with_place()
//!
//! \par Example:
//! \code
//! float data[1024];
//! stf_logical_data_handle ld = stf_logical_data(ctx, data, sizeof(data));  // Assumes host memory
//! // ... use in tasks ...
//! stf_logical_data_destroy(ld);
//! \endcode
//!
//! \see stf_logical_data_with_place(), stf_logical_data_empty(), stf_logical_data_destroy()

stf_logical_data_handle stf_logical_data(stf_ctx_handle ctx, void* addr, size_t sz);
//!
//! \brief Set symbolic name for logical data
//!
//! Associates a human-readable name with logical data for debugging
//! and task graph visualization.
//!
//! \param ld Logical data handle
//! \param symbol Null-terminated string name
//!
//! \pre ld must be valid logical data handle
//! \pre symbol must not be NULL
//!
//! \note Symbol appears in DOT graph output when CUDASTF_DOT_FILE is set
//!
//! \par Example:
//! \code
//! stf_logical_data_handle ld = stf_logical_data(ctx, data, size);
//! stf_logical_data_set_symbol(ld, "input_matrix");
//! \endcode
//!
//! \see stf_task_set_symbol()

void stf_logical_data_set_symbol(stf_logical_data_handle ld, const char* symbol);
//!
//! \brief Destroy logical data handle
//!
//! Destroys logical data handle and releases associated resources.
//! Triggers write-back to host if data was modified.
//!
//! \param ld Logical data handle to destroy
//!
//! \pre ld must be valid logical data handle
//! \post ld becomes invalid, resources released
//!
//! \note Must be called for every created logical data handle
//!
//! \par Example:
//! \code
//! stf_logical_data_handle ld = stf_logical_data(ctx, data, size);
//! // ... use in tasks ...
//! stf_logical_data_destroy(ld);  // Cleanup
//! \endcode
//!
//! \see stf_logical_data(), stf_logical_data_empty()

void stf_logical_data_destroy(stf_logical_data_handle ld);
//! \}

//! \defgroup TaskManagement Task Management
//! \brief Create, configure, and execute computational tasks
//! \{

//!
//! \brief Create new task
//!
//! Creates a new task within the specified context. Task is created
//! but not configured or executed. Use other stf_task_* functions
//! to configure execution place, add dependencies, and execute.
//!
//! \param ctx Context handle
//!
//! \pre ctx must be valid context handle
//! \return Task handle, or NULL on allocation failure
//!
//! \par Example:
//! \code
//! stf_task_handle task = stf_task_create(ctx);
//! // ... configure task ...
//! stf_task_destroy(task);
//! \endcode
//!
//! \see stf_task_destroy(), stf_task_set_exec_place(), stf_task_add_dep()

stf_task_handle stf_task_create(stf_ctx_handle ctx);
//!
//! \brief Set symbolic name for task
//!
//! Associates a human-readable name with task for debugging
//! and task graph visualization.
//!
//! \param t Task handle
//! \param symbol Null-terminated string name
//!
//! \pre t must be valid task handle
//! \pre symbol must not be NULL
//!
//! \note Symbol appears in DOT graph output when CUDASTF_DOT_FILE is set
//!
//! \par Example:
//! \code
//! stf_task_handle task = stf_task_create(ctx);
//! stf_task_set_symbol(task, "matrix_multiply");
//! \endcode
//!
//! \see stf_logical_data_set_symbol()

void stf_task_set_symbol(stf_task_handle t, const char* symbol);
//!
//! \brief Add data dependency to task
//!
//! Adds a data dependency with specified access mode. Order of calls
//! determines index for stf_task_get(). Dependencies determine
//! automatic task synchronization.
//!
//! \param t Task handle
//! \param ld Logical data handle
//! \param m Access mode (STF_READ, STF_WRITE, STF_RW)
//!
//! \pre t must be valid task handle
//! \pre ld must be valid logical data handle
//! \pre m must be valid access mode
//!
//! \par Example:
//! \code
//! stf_task_add_dep(task, input_data, STF_READ);    // Index 0
//! stf_task_add_dep(task, output_data, STF_WRITE);  // Index 1
//! stf_task_add_dep(task, temp_data, STF_RW);       // Index 2
//! \endcode
//!
//! \see stf_task_add_dep_with_dplace(), stf_task_get()

void stf_task_add_dep(stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m);
//!
//! \brief Begin task execution
//!
//! Starts task execution. After this call, use stf_task_get_custream()
//! and stf_task_get() to access CUDA stream and data pointers.
//!
//! \param t Task handle
//!
//! \pre t must be valid task handle
//! \pre Task dependencies must already be configured
//! \post Task is executing, stream and data available
//!
//! \par Example:
//! \code
//! // Configure task first
//! stf_task_add_dep(task, data, STF_RW);
//!
//! // Start execution
//! stf_task_start(task);
//!
//! // Now can access stream and data
//! CUstream stream = stf_task_get_custream(task);
//! float* ptr = (float*)stf_task_get(task, 0);
//! \endcode
//!
//! \see stf_task_end(), stf_task_get_custream(), stf_task_get()

void stf_task_start(stf_task_handle t);
//!
//! \brief End task execution
//!
//! Ends task execution. Call after all CUDA operations are
//! submitted to the task stream.
//!
//! \param t Task handle
//!
//! \pre t must be valid task handle
//! \pre stf_task_start() must have been called
//! \post Task execution ended, may continue asynchronously
//!
//! \par Example:
//! \code
//! stf_task_start(task);
//! CUstream stream = stf_task_get_custream(task);
//!
//! // Launch operations
//! my_kernel<<<grid, block, 0, (cudaStream_t)stream>>>(args...);
//!
//! stf_task_end(task);  // Operations may still be running
//! \endcode
//!
//! \see stf_task_start()

void stf_task_end(stf_task_handle t);
//!
//! \brief Get data pointer for task dependency
//!
//! Returns pointer to logical data instance for specified dependency.
//! Index corresponds to order of stf_task_add_dep() calls.
//!
//! \param t Task handle
//! \param submitted_index Dependency index (0-based)
//! \return Pointer to data (cast to appropriate type)
//!
//! \pre t must be valid task handle
//! \pre stf_task_start() must have been called
//! \pre submitted_index must be valid dependency index
//! \post Pointer valid until stf_task_end()
//!
//! \par Example:
//! \code
//! // Dependencies added in this order:
//! stf_task_add_dep(task, input, STF_READ);     // Index 0
//! stf_task_add_dep(task, output, STF_WRITE);   // Index 1
//!
//! stf_task_start(task);
//!
//! // Get data pointers
//! const float* in = (const float*)stf_task_get(task, 0);
//! float* out = (float*)stf_task_get(task, 1);
//! \endcode
//!
//! \see stf_task_add_dep(), stf_task_start()

void* stf_task_get(stf_task_handle t, int submitted_index);
//!
//! \brief Destroy task handle
//!
//! Destroys task handle and releases associated resources.
//! Task should be completed before destruction.
//!
//! \param t Task handle to destroy
//!
//! \pre t must be valid task handle
//! \post t becomes invalid, resources released
//!
//! \note Must be called for every created task
//!
//! \par Example:
//! \code
//! stf_task_handle task = stf_task_create(ctx);
//! // ... configure and execute task ...
//! stf_task_destroy(task);
//! \endcode
//!
//! \see stf_task_create()

void stf_task_destroy(stf_task_handle t);
//! \brief Copy user data into the host launch scope
//!
//! The data is copied and later accessible via
//! stf_host_launch_deps_get_user_data() inside the callback.
//! An optional destructor is called on the copied buffer when the
//! dependency handle is destroyed.
//!
//! \param h Host launch handle
//! \param data Pointer to user data
//! \param size Size of user data in bytes
//! \param dtor Optional destructor for the copied data (may be NULL)
void stf_host_launch_set_user_data(stf_host_launch_handle h, const void* data, size_t size, void (*dtor)(void*));